Fix paragraph spacing

--- a/src/assets/style/container.scss
+++ b/src/assets/style/container.scss
@@ -59,10 +59,6 @@
       margin-bottom: 0;
     }
   }
-
-  p {
-    margin-bottom: 0;
-  }
 }
 
 /* set variables based on admonition type */
